# ai-engineeing-buildcamp

./: prompts  pyproject.toml
01-week/: chuncking.ipynb  convert_to_md.py  download_pdfs.py
01-week/books/markdown/: 001_think_python_2e_thinkpython2.md  002_think_dsp_thinkdsp.md  004_think_java_2e_thinkjava2.md  006_think_os_thinkos.md
01-week/data/books/: 001_think_python_2e_thinkpython2.md
01-week/data/books/markdown/: 003_think_complexity_2e_thinkcomplexity2.md  005_physical_modeling_in_matlab_PhysicalModelingInMatlab4.md  007_think_c_Think-C.md
